--- a/aura-connect/src/main/resources/application.yml
+++ b/aura-connect/src/main/resources/application.yml
@@ -18,3 +18,6 @@ logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.orm.jdbc.bind: trace
+jwt:
+  secret: ${JWT_SECRET:please-change-this-secret-key-value-which-is-long-enough}
+  access-token-validity-seconds: ${JWT_ACCESS_TOKEN_VALIDITY_SECONDS:3600}
