--- a/aura-connect-backend/src/test/resources/application.yml
+++ b/aura-connect-backend/src/test/resources/application.yml
@@ -1,25 +1,30 @@
 spring:
-  application:
-    name: aura-connect
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/aura}
-    username: ${SPRING_DATASOURCE_USERNAME:aura}
-    password: ${SPRING_DATASOURCE_PASSWORD:aura}
+    url: jdbc:h2:mem:aura;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
   security:
     oauth2:
       client:
         registration:
           google:
-            client-id: ${OAUTH2_GOOGLE_CLIENT_ID:google-client-id}
-            client-secret: ${OAUTH2_GOOGLE_CLIENT_SECRET:google-client-secret}
+            client-id: test-google-client-id
+            client-secret: test-google-client-secret
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope:
               - profile
               - email
           kakao:
-            client-id: ${OAUTH2_KAKAO_CLIENT_ID:kakao-rest-api-key}
-            client-secret: ${OAUTH2_KAKAO_CLIENT_SECRET:kakao-client-secret}
+            client-id: test-kakao-client-id
+            client-secret: test-kakao-client-secret
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
@@ -28,8 +33,8 @@ spring:
               - profile_image
               - account_email
           naver:
-            client-id: ${OAUTH2_NAVER_CLIENT_ID:naver-client-id}
-            client-secret: ${OAUTH2_NAVER_CLIENT_SECRET:naver-client-secret}
+            client-id: test-naver-client-id
+            client-secret: test-naver-client-secret
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
@@ -48,18 +53,6 @@ spring:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
-  jpa:
-    hibernate:
-      ddl-auto: update
-    open-in-view: false
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
 jwt:
-  secret: ${JWT_SECRET:please-change-this-secret-key-value-which-is-long-enough}
-  access-token-validity-seconds: ${JWT_ACCESS_TOKEN_VALIDITY_SECONDS:3600}
+  secret: test-secret-key-value-which-is-long-enough-12345678901234567890
+  access-token-validity-seconds: 3600
