--- a/aura-connect-backend/src/test/resources/application.yml
+++ b/aura-connect-backend/src/test/resources/application.yml
@@ -56,3 +56,15 @@ spring:
 jwt:
   secret: test-secret-key-value-which-is-long-enough-12345678901234567890
   access-token-validity-seconds: 3600
+  refresh-token-validity-seconds: 1209600
+  access-token-cookie-name: ACCESS_TOKEN
+  refresh-token-cookie-name: REFRESH_TOKEN
+security:
+  cookie:
+    domain: test.example.com
+    path: /
+    same-site: LAX
+    secure: true
+oauth2:
+  cookie:
+    authorization-request-cookie-name: OAUTH2_AUTH_REQUEST
