--- a/aura-connect-backend/src/test/resources/application.yml
+++ b/aura-connect-backend/src/test/resources/application.yml
@@ -54,17 +54,20 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 jwt:
+  # Custom prefix bound via JwtProperties; IDE warnings can be ignored.
   secret: test-secret-key-value-which-is-long-enough-12345678901234567890
-  access-token-validity-seconds: 3600
-  refresh-token-validity-seconds: 1209600
-  access-token-cookie-name: ACCESS_TOKEN
-  refresh-token-cookie-name: REFRESH_TOKEN
+  'access-token-validity-seconds': 3600
+  'refresh-token-validity-seconds': 1209600
+  'access-token-cookie-name': ACCESS_TOKEN
+  'refresh-token-cookie-name': REFRESH_TOKEN
 security:
+  # Custom prefix bound via CookieSecurityProperties; IDE warnings can be ignored.
   cookie:
     domain: test.example.com
     path: /
-    same-site: LAX
+    'same-site': LAX
     secure: true
 oauth2:
+  # Custom prefix bound via OAuth2CookieProperties; IDE warnings can be ignored.
   cookie:
-    authorization-request-cookie-name: OAUTH2_AUTH_REQUEST
+    'authorization-request-cookie-name': OAUTH2_AUTH_REQUEST
