--- a/aura-connect-backend/src/main/resources/application.yml
+++ b/aura-connect-backend/src/main/resources/application.yml
@@ -3,31 +3,41 @@ spring:
     active: dev
   application:
     name: aura-connect
-app:
-  frontend-base-url: ${APP_FRONTEND_BASE_URL:http://localhost:5173}
+
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/aura}
-    username: ${SPRING_DATASOURCE_USERNAME:aura}
-    password: ${SPRING_DATASOURCE_PASSWORD:aura}
+    url: jdbc:postgresql://localhost:5432/aura
+    username: aura
+    password: aura
+
   data:
     redis:
-      host: ${SPRING_REDIS_HOST:localhost}
-      port: ${SPRING_REDIS_PORT:6379}
+      host: localhost
+      port: 6379
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    open-in-view: false
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
   security:
     oauth2:
       client:
         registration:
           google:
-            client-id: ${OAUTH2_GOOGLE_CLIENT_ID:google-client-id}
-            client-secret: ${OAUTH2_GOOGLE_CLIENT_SECRET:google-client-secret}
+            client-id: google-client-id
+            client-secret: google-client-secret
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope:
               - profile
               - email
           kakao:
-            client-id: ${OAUTH2_KAKAO_CLIENT_ID:kakao-rest-api-key}
-            client-secret: ${OAUTH2_KAKAO_CLIENT_SECRET:kakao-client-secret}
+            client-id: kakao-rest-api-key
+            client-secret: kakao-client-secret
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
@@ -36,8 +46,8 @@ app:
               - profile_image
               - account_email
           naver:
-            client-id: ${OAUTH2_NAVER_CLIENT_ID:naver-client-id}
-            client-secret: ${OAUTH2_NAVER_CLIENT_SECRET:naver-client-secret}
+            client-id: naver-client-id
+            client-secret: naver-client-secret
             client-authentication-method: client_secret_post
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
@@ -56,36 +66,36 @@ app:
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
-  jpa:
-    hibernate:
-      ddl-auto: update
-    open-in-view: false
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+app:
+  frontend-base-url: http://localhost:5173
+
 logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.orm.jdbc.bind: trace
+
 security:
   # Custom prefix bound via CookieSecurityProperties; IDE "Unknown property" warnings are safe to ignore.
   cookie:
-    domain: ${COOKIE_DOMAIN:}
-    path: ${COOKIE_PATH:/}
-    'same-site': ${COOKIE_SAME_SITE:LAX}
-    secure: ${COOKIE_SECURE:true}
+    domain: ""
+    path: /
+    'same-site': LAX
+    secure: true
+
 oauth2:
   # Custom prefix bound via OAuth2CookieProperties; IDE warnings can be ignored.
   cookie:
-    'authorization-request-cookie-name': ${OAUTH2_AUTH_REQUEST_COOKIE_NAME:OAUTH2_AUTH_REQUEST}
+    'authorization-request-cookie-name': OAUTH2_AUTH_REQUEST
+
 jwt:
-    # Custom prefix bound via JwtProperties; IDE warnings can be ignored.
-    secret: ${JWT_SECRET:please-change-this-secret-key-value-which-is-long-enough}
-    'access-token-validity-seconds': ${JWT_ACCESS_TOKEN_VALIDITY_SECONDS:3600}
-    'refresh-token-validity-seconds': ${JWT_REFRESH_TOKEN_VALIDITY_SECONDS:1209600}
-    'access-token-cookie-name': ${JWT_ACCESS_TOKEN_COOKIE_NAME:ACCESS_TOKEN}
-    'refresh-token-cookie-name': ${JWT_REFRESH_TOKEN_COOKIE_NAME:REFRESH_TOKEN}
+  # Custom prefix bound via JwtProperties; IDE warnings can be ignored.
+  secret: please-change-this-secret-key-value-which-is-long-enough
+  'access-token-validity-seconds': 3600
+  'refresh-token-validity-seconds': 1209600
+  'access-token-cookie-name': ACCESS_TOKEN
+  'refresh-token-cookie-name': REFRESH_TOKEN
+
 cors:
   # Custom prefix bound via CorsProperties; IDE warnings can be ignored.
   'allow-credentials': true
