--- a/aura-connect-client/Dockerfile
+++ b/aura-connect-client/Dockerfile
@@ -1,5 +1,5 @@
 # 1. Node.js 개발 환경 (18버전)
-FROM node:18-alpine
+FROM node:22-alpine
 
 # 2. 작업 폴더 설정
 WORKDIR /app
@@ -12,5 +12,5 @@ RUN npm install
 # 4. 소스 코드 복사
 COPY . .
 
-# 5. 개발 서버 실행 (핫 리로딩을 위해 npm start 사용)
-CMD ["npm", "start"]
+# 5. Vite 개발 서버 실행 (핫 리로딩)
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
