--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U aura"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
 
   backend:
     build:
@@ -28,7 +34,8 @@ services:
       - SPRING_DATASOURCE_USERNAME=aura
       - SPRING_DATASOURCE_PASSWORD=aura
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   frontend:
     build:
