--- a/aura-connect-backend/src/main/resources/application.yml
+++ b/aura-connect-backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://db:5432/aura
+    url: jdbc:postgresql://localhost:5432/aura
     username: aura
     password: aura
 
