--- a/aura-connect-backend/build.gradle
+++ b/aura-connect-backend/build.gradle
@@ -1,42 +1,29 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.4.11'
-	id 'io.spring.dependency-management' version '1.1.7'
+    id 'java'
+    id 'org.springframework.boot' version '3.4.11'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.aura'
 version = '0.0.1-SNAPSHOT'
-description = 'AURA O2O hair platform backend'
+description = 'AURA backend'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-implementation 'org.springframework.boot:spring-boot-starter-cache'
-implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-implementation 'org.springframework.boot:spring-boot-starter-security'
-implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-implementation 'org.springframework.boot:spring-boot-starter-validation'
-implementation 'org.springframework.boot:spring-boot-starter-web'
-implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
-compileOnly 'org.projectlombok:lombok'
-developmentOnly 'org.springframework.boot:spring-boot-devtools'
-runtimeOnly 'org.postgresql:postgresql'
-runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
-runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
-annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
