--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,26 @@
             "projectName": "aura-connect-aura-connect-backend",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-ConnectApplication<connect-aura-backend>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.aura.connect.ConnectApplication",
+            "projectName": "connect-aura-backend",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-BackendApplication<backend-aura-backend>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.aura.backend.BackendApplication",
+            "projectName": "backend-aura-backend",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
