--- a/aura-backend/src/main/resources/application.yaml
+++ b/aura-backend/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/aura
+    username: aura
+    password: aura
+    driver-class-name: org.postgresql.Driver
   application:
     name: backend
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
   jpa:
     hibernate:
