Implement auth flow with validation and tests

--- a/aura-backend/src/main/resources/application.yaml
+++ b/aura-backend/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/aura
-    username: aura
-    password: aura
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:aura;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+    username: sa
+    password: ""
+    driver-class-name: org.h2.Driver
   application:
     name: backend
 
@@ -14,6 +14,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  h2:
+    console:
+      enabled: true
 
 logging:
   level:
