--- a/aura-backend/src/main/resources/application.yml
+++ b/aura-backend/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:aura;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
-    username: sa
-    password: ""
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/AURA
+    username: AURA
+    password: AURA
+    driver-class-name: org.postgresql.Driver
   application:
     name: backend
 
@@ -13,11 +13,8 @@ spring:
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-
-  h2:
-    console:
-      enabled: true
 
 logging:
   level:
