도커 세팅중!!

--- a/aura-backend/build.gradle
+++ b/aura-backend/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.8'
+	id 'org.springframework.boot' version '4.0.1'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -21,22 +21,28 @@ configurations {
 }
 
 repositories {
-        mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-security'
-        implementation 'org.springframework.boot:spring-boot-starter-validation'
-        runtimeOnly 'org.postgresql:postgresql'
+	// 1. Web 기능을 위한 필수 스타터 (webmvc 대신 이걸 써야 해!)
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testCompileOnly 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
+	// 2. Spring Security (이게 있어야 아까 만든 CORS 설정을 인식해!)
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// 3. 데이터베이스 및 JPA 관련
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'org.postgresql:postgresql'
+
+	// 4. Lombok (DTO 만들 때 필수!)
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// 5. 개발 편의 기능 및 테스트
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
