--- a/aura-backend/src/main/resources/application.yml
+++ b/aura-backend/src/main/resources/application.yml
@@ -1,22 +1,19 @@
 spring:
+  application:
+    name: aura-backend
+
+  # 데이터베이스 연결 설정 (Docker 내부가 아니라, Spring이 실행되는 시점 기준)
   datasource:
-    url: jdbc:postgresql://localhost:5432/aura
+    url: jdbc:postgresql://db:5432/aura
     username: aura
     password: aura
     driver-class-name: org.postgresql.Driver
-  application:
-    name: backend
 
+  # JPA (테이블 자동 생성 및 SQL 로그 보기)
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: update  # Entity가 변경되면 DB 스키마도 자동으로 수정해라
+    show-sql: true      # 실행되는 SQL을 콘솔에 보여줘라
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.orm.jdbc.bind: trace
+        format_sql: true # SQL을 보기 좋게 줄바꿈 해줘라
